@@ -59,5 +59,9 @@ namespace FB2EPubConverter.ElementConverters
         }
 
 
+        public override string GetElementType()
+        {
+            return string.Empty;
+        }
     }
 }
