@@ -59,43 +59,7 @@ namespace FB2EPubConverter.ElementConverters
                         {
                             if (needToInsert && text.Text.Length > 0)
                             {
-                                var span1 = new Span();
-                                span1.Class.Value = "drop";
-                                int dropEnd = 0;
-                                // "pad" the white spaces so drop starts from visible character
-                                while (UnicodeHelpers.IsSpaceLike(text.Text[dropEnd]) && dropEnd < text.Text.Length)
-                                {
-                                    dropEnd++;
-                                }
-                                // calculate the initial drop part
-                                string dropPart = text.Text.Substring(0, dropEnd + 1);
-                                // non-drop part starts from the next character
-                                int nondropPosition = dropEnd + 1;
-                                // If first character is dash/hyphen like we need to add character to 
-                                // capital drop so it looks better with next character
-                                if (UnicodeHelpers.IsNeedToBeJoinInDrop(dropPart[dropEnd]))
-                                {
-                                    // we need to add to capital drop all spaces if any
-                                    while (nondropPosition < text.Text.Length && UnicodeHelpers.IsSpaceLike(text.Text[nondropPosition]))
-                                    {
-                                        nondropPosition++;
-                                    }
-                                    // we need to advance to include one following nonspace character , unless
-                                    // we already at last character of the text
-                                    if (nondropPosition - dropEnd < text.Text.Length)
-                                    {
-                                        nondropPosition++;
-                                    }
-                                    // update drop part with the "string" we calculated
-                                    dropPart += text.Text.Substring(dropEnd + 1, nondropPosition - dropEnd - 1);
-                                }
-                                span1.Add(new SimpleEPubText { Text = dropPart });
-                                list.Add(span1);
-                                string substring = text.Text.Substring(nondropPosition);
-                                if (substring.Length > 0)
-                                {
-                                    list.Add(new SimpleEPubText { Text = substring });
-                                }
+                                AddAsDrop(list,text);
                             }
                             else
                             {
@@ -213,5 +177,56 @@ namespace FB2EPubConverter.ElementConverters
             return list;
         }
 
+        /// <summary>
+        /// Create a text with Capital Drop
+        /// </summary>
+        /// <param name="parent">parent container insert into</param>
+        /// <param name="text">text to insert</param>
+        private static void AddAsDrop(List<IXHTMLItem> parent, SimpleText text)
+        {
+            var span1 = new Span();
+            span1.Class.Value = "drop";
+            int dropEnd = 0;
+            // "pad" the white spaces so drop starts from visible character
+            while (UnicodeHelpers.IsSpaceLike(text.Text[dropEnd]) && dropEnd < text.Text.Length)
+            {
+                dropEnd++;
+            }
+            // calculate the initial drop part
+            string dropPart = text.Text.Substring(0, dropEnd + 1);
+            // non-drop part starts from the next character
+            int nondropPosition = dropEnd + 1;
+            // If first character is dash/hyphen like we need to add character to 
+            // capital drop so it looks better with next character
+            if (UnicodeHelpers.IsNeedToBeJoinInDrop(dropPart[dropEnd]))
+            {
+                // we need to add to capital drop all spaces if any
+                while (nondropPosition < text.Text.Length && UnicodeHelpers.IsSpaceLike(text.Text[nondropPosition]))
+                {
+                    nondropPosition++;
+                }
+                // we need to advance to include one following nonspace character , unless
+                // we already at last character of the text
+                if (nondropPosition - dropEnd < text.Text.Length)
+                {
+                    nondropPosition++;
+                }
+                // update drop part with the "string" we calculated
+                dropPart += text.Text.Substring(dropEnd + 1, nondropPosition - dropEnd - 1);
+            }
+            span1.Add(new SimpleEPubText { Text = dropPart });
+            parent.Add(span1);
+            string substring = text.Text.Substring(nondropPosition);
+            if (substring.Length > 0)
+            {
+                parent.Add(new SimpleEPubText { Text = substring });
+            }
+
+        }
+
+        public override string GetElementType()
+        {
+            return string.Empty;
+        }
     }
 }
