@@ -120,8 +120,10 @@
     <Compile Include="ElementConverters\InlineImageConverter.cs" />
     <Compile Include="ElementConverters\InternalLinkConverter.cs" />
     <Compile Include="ElementConverters\LinkSectionConverter.cs" />
+    <Compile Include="ElementConverters\MainEpigraphConverter.cs" />
     <Compile Include="ElementConverters\ParagraphConverter.cs" />
     <Compile Include="ElementConverters\PoemConverter.cs" />
+    <Compile Include="ElementConverters\PoemDateConverter.cs" />
     <Compile Include="ElementConverters\RowConverter.cs" />
     <Compile Include="ElementConverters\SimpleTextElementConverter.cs" />
     <Compile Include="ElementConverters\StanzaConverter.cs" />
