@@ -112,6 +112,7 @@ p {
 	page-break-after: avoid;
 	page-break-inside: avoid;
 	font-weight: bold;
+	margin-top: 1.5em;
     margin-left: auto;
     margin-right: auto;
 	text-align: center;
