@@ -8,6 +8,8 @@
 * Fixed a bug when CSS stylesheet for one element contained more than one occurance of same parameter (in this case previously entire element was ignored)
 * Some small changes to the look of the epigraph in default style
 * Conversion part of the code was heavily refactored, so expect new bugs and crashes :)
+* Changed default CSS settings for subtitle to allow a bit more space before subtitles (on the top)
+* Subtitle element is no longer enclose in DIV - it was not needed
 
 
 1.0.41
